Remove ImmutableAtom from stateCheck